[package]
name = "lc3_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.82" }
js-sys = "0.3.59"

[profile.release]
lto = true
opt-level = 3